# GeoPatch_CVIU_2022

./: Dockerfile  README.md  Singularity.geopatch  architecture.py  docker-compose.yml  matchGeopatchCNN.py  run_demo.sh
geopatch/: ArgParser.hpp  CMakeLists.txt  CSVParser.hpp  DepthProcesor.cpp  DepthProcessor.hpp  Descriptors.hpp  Mesh.cpp  Mesh.hpp  Utils.hpp  Vec3.hpp  main.cpp  run.py  simple_desc.cpp
nonrigid_sim/: CMakeLists.txt  README.md  corner_score.hpp  gen_pairwise_groundtruth.py  nonrigid_sim_auto.cpp  run_simulation.py
weights/: ours_shift8x3equal_circularpad_train200.h5  ours_shift8x3equal_circularpad_train200.json
